force-app/main/default/objects/Comissao__c/fields/Percentual__c.field-meta.xml
<CustomField>
    <fullName>Percentual__c</fullName>
    <formula>IF(  PropostaCompra__r.Imovel__r.RecordType.DeveloperName == &apos;Apartamento&apos;, 
					 $CustomMetadata.ConfiguracaoPropostaCompra__mdt.Apartamento.PercentualComissao__c , 
		$CustomMetadata.ConfiguracaoPropostaCompra__mdt.Casa.PercentualComissao__c 			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>