force-app/main/default/objects/Comissao__c/fields/PropostaCompra__c.field-meta.xml
<CustomField>
    <fullName>PropostaCompra__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposta de compra</label>
    <referenceTo>PropostaCompra__c</referenceTo>
    <relationshipLabel>Comissões</relationshipLabel>
    <relationshipName>Comissoes</relationshipName>
    <type>Lookup</type>
</CustomField>